--- a/lap2kakas.html
+++ b/lap2kakas.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 
-	<h1>Nama : Helda H. Hery </h1>
-	<h2>Nim  : 60200116013 </h2>
+	<h1>Nama : Fatimah H. Tombong </h1>
+	<h2>Nim  : 60200116007 </h2>
 	<h3>Kelas: A </h3>
+	<p>Jurusan : Teknik Informatika</p>
+	<p>Universitas : Uin Alauddin Makassar</p>
 	
 </body>
 </html>
